upgrade status management

--- a/store/templates/store/booking.html
+++ b/store/templates/store/booking.html
@@ -85,9 +85,9 @@
                         <button type="submit" name="action" value="C" class="btn btn-warning">Annulée</button>
                     {% endif %}
                     {% if 'D' in booking.status %}
-                        <button type="submit" name="action" value="D" class="btn btn-danger">Supprimée</button>
+                        <button type="submit" name="action" value="D" class="btn btn-danger">Supprimé</button>
                     {% else %}
-                        <button type="submit" name="action" value="D" class="btn btn-danger" onclick="return confirm('Etes-vous sûr ?');">Supprimée</button>
+                        <button type="submit" name="action" value="D" class="btn btn-danger" onclick="return confirm('Etes-vous sûr ?');">Supprimé</button>
                     {% endif %}
                 </form>
             </td>
