--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -12,7 +12,7 @@
         <meta name="author" content="" />
         <title>SELIO</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{% static 'store/assets/favicon.ico' %}" />
+        <link rel="icon" type="image/png" sizes="96x96" href="{% static 'store/assets/favicon-96x96.png' %}" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
