--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -49,18 +49,12 @@
                         {% endif %}
                     </ul>
                     <div class="d-flex">
-                        {% if user.is_authenticated %}
+                        {% if user.is_staff %}
                             <a  href="{% url 'store:booking' %}">
                                 <button class="btn btn-outline-dark" type="submit">
                                     <i class="bi-cart-fill me-1"></i>
                                     Commandes
                                     <span class="badge bg-dark text-white ms-1 rounded-pill">{{ bookings_list.all|length }}</span>
-                                </button>
-                            </a>
-                            <a  href="{% url 'store:logout' %}">
-                                <button class="btn btn-outline-dark" type="submit">
-                                    Hi {{ user.username }}!
-                                    <i class="bi bi-box-arrow-right me-1"></i>
                                 </button>
                             </a>
                         {% else %}
@@ -71,12 +65,14 @@
                                     <span class="badge bg-dark text-white ms-1 rounded-pill">{{ basket|length }}</span>
                                 </button>
                             </a>
-                            <a href="{% url 'store:login' %}">
-                                <button class="btn btn-outline-dark" type="submit">
-                                    <i class="bi bi-box-arrow-in-right me-1"></i>
-                                    Login    
-                                </button>
-                            </a>
+                        {% endif %}
+                        {% if user.is_authenticated %}
+                        <a  href="{% url 'store:logout' %}">
+                            <button class="btn btn-outline-dark" type="submit">
+                                Hi {{ user.username }}!
+                                <i class="bi bi-box-arrow-right me-1"></i>
+                            </button>
+                        </a>
                         {% endif %}
                     </div>
                 </div>
@@ -85,7 +81,11 @@
         {% block content %}{% endblock %}
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; SELIO Website 2021</p></div>
+            <div class="container">
+                <p class="m-0 text-center text-white">Copyright &copy; SELIO Website 2021
+                <a class="bi bi-arrow-right-square-fill bg-transparent btn-outline-light" href="{% url 'store:login' %}"></a></p>
+            </div>
+            
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
