--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -87,9 +87,11 @@
             </div>
             
         </footer>
+        {% block script %}
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="{% static 'store/js/scripts.js' %}"></script>
+        {% endblock %}
     </body>
 </html>
