--- a/store/templates/store/contact_detail.html
+++ b/store/templates/store/contact_detail.html
@@ -1,12 +1,26 @@
-{% extends 'store/base.html' %} 
+
 {% load bootstrap4 %}
+{% load static %}
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>SELIO</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/png" sizes="96x96" href="{% static 'store/assets/favicon-96x96.png' %}" />
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link rel="stylesheet" type="text/css" href="{% static 'store/css/styles.css' %}" />
+</head>
 
 {% block content %}
 <hr class="detail-separator">
 <h1 class="intro-text text-center">{{ contact.user.username }}</h1>
 <hr class="detail-separator">
 
-<div class="container">
+<div class="container card h-50">
     <div class="row">
         <div class="col form-group">
             <label class="form-control" for="{{ CForm.id_for_label }}">Adresse de facturation</label><br />
@@ -19,4 +33,6 @@
         </div>
     </div>
 </div>
+{% endblock %}
+{% block script %}
 {% endblock %}
