--- a/store/templates/store/basket.html
+++ b/store/templates/store/basket.html
@@ -73,6 +73,7 @@
         <form class="form-group w-25 align-self-center" action="{% url 'store:basket' %}" method="post">
             {% csrf_token %}
             <input type="hidden" name="basket" value="{{ basket }}" >
+            <input class="form-control" type="email" name="email" placeholder="Email" required><br />
             {% bootstrap_form CForm %}
             <button type="submit" class="btn btn-success" onclick="return confirm('Merci de confirmer');">Commander</button>
         </form>
