--- a/store/templates/store/booking_detail.html
+++ b/store/templates/store/booking_detail.html
@@ -75,28 +75,21 @@
     </nav>
 {% block content %}
 <hr class="detail-separator">
-<h1 class="intro-text text-center">{{ contact.user.username }}</h1>
+<h2 class="intro-text text-center">Commande N° {{ booking.id }}</h2>
 <hr class="detail-separator">
 
 <div class="container card h-50">
+
     <div class="row">
         <div class="col form-group">
-            {% bootstrap_form UForm %}
-        </div>
-    </div>
-    <div class="row">
-        <div class="col form-group">
-            <label class="form-control" for="{{ CForm.id_for_label }}">Adresse de facturation</label><br />
-            {% bootstrap_form CForm %}
-        </div>
-        <div class="col form-group">
-            <label class="form-control" for="{{ CForm.id_for_label }}">Adresse de livraison</label><br />
-            {% bootstrap_form CForm %}
+                <p>{{ booking.created_at }}</p>
+                <p>{{ booking.contact.user.username }}</p>
+                {% for booking_detail in booking.booking_details.all %}
+                    <p>{{ booking_detail.ouvrage.title }}</p>
+                {% endfor %}
         </div>
     </div>
 </div>
-{% endblock %}
-{% block script %}
 {% endblock %}
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
