--- a/store/templates/store/booking_detail.html
+++ b/store/templates/store/booking_detail.html
@@ -74,22 +74,24 @@
         </div>
     </nav>
 {% block content %}
-<hr class="detail-separator">
-<h2 class="intro-text text-center">Commande N° {{ booking.id }}</h2>
-<hr class="detail-separator">
-
-<div class="container card h-50">
-
-    <div class="row">
-        <div class="col form-group">
-                <p>{{ booking.created_at }}</p>
-                <p>{{ booking.contact.user.username }}</p>
-                {% for booking_detail in booking.booking_details.all %}
-                    <p>{{ booking_detail.ouvrage.title }}</p>
-                {% endfor %}
+{% if user.is_staff or current_user.id == contact.user.id %}
+    <hr class="detail-separator">
+    <h2 class="intro-text text-center">Commande N° {{ booking.id }}</h2>
+    <hr class="detail-separator">    
+    
+    <div class="container card h-50">
+        <div class="row">
+            <div class="col form-group">
+                    <p>{{ booking.created_at }}</p>
+                    <p>{{ booking.contact.user.username }}</p>
+                    {% for booking_detail in booking.booking_details.all %}
+                        <p>{{ booking_detail.ouvrage.title }}</p>
+                    {% endfor %}
+                    <p>{{ booking.total }}</p>
+            </div>
         </div>
     </div>
-</div>
+{% endif %}
 {% endblock %}
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
