--- a/store/templates/store/contact_detail.html
+++ b/store/templates/store/contact_detail.html
@@ -74,27 +74,40 @@
         </div>
     </nav>
 {% block content %}
-<hr class="detail-separator">
-<h1 class="intro-text text-center">{{ contact.user.username }}</h1>
-<hr class="detail-separator">
-
-<div class="container card h-50">
-    <div class="row">
-        <div class="col form-group">
-            {% bootstrap_form UForm %}
+{% if user.is_staff or current_user.id == contact.user.id %}
+    <hr class="detail-separator">
+    <h1 class="intro-text text-center">{{ contact.user.username }}</h1>
+    <hr class="detail-separator">
+    <div class="container card h-50">
+        <div class="row">
+            <div class="col form-group">
+                {% bootstrap_form UForm %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                    <div class="col form-group">
+                        <label class="form-control" for="{{ CForm.id_for_label }}">Adresse de facturation</label><br />
+                        {% bootstrap_form CForm %}
+                    </div>
+                    <div class="col form-group">
+                        <label class="form-control" for="{{ CForm.id_for_label }}">Adresse de livraison</label><br />
+                        {% bootstrap_form CForm %}
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="row form-group">
+                    <label class="form-control" for="{{ CForm.id_for_label }}">Historique de Commandes</label><br />
+                    {% for booking in contact.bookings.all %}
+                        <p><a href="{% url 'store:booking_detail' booking_id=booking.id %}">{{ booking.created_at }}</a></p>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col form-group">
-            <label class="form-control" for="{{ CForm.id_for_label }}">Adresse de facturation</label><br />
-            {% bootstrap_form CForm %}
-        </div>
-        <div class="col form-group">
-            <label class="form-control" for="{{ CForm.id_for_label }}">Adresse de livraison</label><br />
-            {% bootstrap_form CForm %}
-        </div>
-    </div>
-</div>
+{% endif %}
 {% endblock %}
 {% block script %}
 {% endblock %}
