--- a/store/templates/store/contact_modal.html
+++ b/store/templates/store/contact_modal.html
@@ -1,5 +1,5 @@
 <script>
-    $(document).on("click", ".open-booking", function (e) {
+    $(document).on("click", ".open-contact", function (e) {
       e.preventDefault();
       var $popup = $("#popup");
       var popup_url = $(this).data("popup-url");
