--- a/store/templates/store/contact.html
+++ b/store/templates/store/contact.html
@@ -24,7 +24,10 @@
                 <tbody>
                 {% for contact in contacts_list.all %}
                 <tr>
-                    <td><a href="{% url 'store:contact_detail' contact_id=contact.id %}">{{ contact.default_shipping_address.last_name }}</a></td>
+                    <td><a class="open-contact" href="{% url 'store:contact_detail' contact_id=contact.id %}"
+                        data-popup-url="{% url 'store:contact_detail' contact_id=contact.id %}">
+                        {{ contact.default_shipping_address.last_name }}</a>
+                    </td>
                     <td>{{ contact.default_shipping_address.first_name }}</td>
                     <td>{{ contact.user.email }}</td>
                     <td>{{ contact.default_shipping_address.city }}</td>
@@ -53,4 +56,5 @@
             <p>Aucun contact enregistré</p>
         {% endif %}
 </section>
+{% include "store/contact_modal.html" %}
 {% endblock %}
