--- a/store/templates/store/list.html
+++ b/store/templates/store/list.html
@@ -32,7 +32,12 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'store:detail' ouvrage_id=ouvrage.id %}">Sélectionner</a></div>
+                                <div class="text-center">
+                                    <a class="btn btn-outline-dark mt-auto open-ouvrage" href="{% url 'store:detail' ouvrage_id=ouvrage.id %}"
+                                    data-popup-url="{% url 'store:detail' ouvrage_id=ouvrage.id %}">
+                                    Sélectionner
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -45,3 +50,4 @@
     {% endif %}
     </section>
 {% endif %}
+{% include "store/ouvrage_modal.html" %}
