--- a/store/templates/store/contact_modal.html
+++ b/store/templates/store/contact_modal.html
@@ -10,7 +10,7 @@
   </script>
 
 <div id="popup" class="modal fade" role="dialog">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-xl">
       <div class="modal-content">
         <div class="modal-body"></div>
         <div class="modal-footer">
