--- a/store/templates/store/contact.html
+++ b/store/templates/store/contact.html
@@ -18,7 +18,7 @@
                         <th>Adresse</th>
                         <th>Commandes</th>
                         <th>Commandes en cours</th>
-                        <th></th>
+                        <th>Suppression</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -30,15 +30,15 @@
                     </td>
                     <td>{{ contact.default_shipping_address.first_name }}</td>
                     <td>{{ contact.user.email }}</td>
-                    <td>{{ contact.default_shipping_address.city }}</td>
-                    <td>Commandes</td>
-                    <td>{% for booking in contact.bookings.all %}
-                            {% for bookingdetail in booking.bookingdetails.all %}
-                                {{ bookingdetail.ouvrage.title }}<br />
-                                {% if booking.bookingdetails.all|length > 1 %}
-                                    ----------------<br />
-                                {% endif %}
-                            {% endfor %}
+                    <td>{{ contact.default_shipping_address }}</td>
+                    <td>
+                        {% for booking in contact.bookings %}
+                            Commande<br />
+                        {% endfor %}
+                    </td>
+                    <td>{% for booking in contact.bookings %}
+                                {{ booking.id }}<br />
+                                ----------------<br />
                         {% endfor %}
                     </td>
                     <td>
